package main.java.Pizza;

public class PizzaFromageStyleBrest extends Pizza {

	public PizzaFromageStyleBrest() {
		super.nom = "sauce style brest et fromage";
		super.garnitures.add("Parmigiano reggiano râpé");
	}
}